@@ -67,6 +67,7 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
 
     /* ------------------  Public interface method -------------------------- */
 
+    @Override
     public long getReceivedBytesCount() {
         if (this.inTransportMetric != null) {
             return this.inTransportMetric.getBytesTransferred();
@@ -75,6 +76,7 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         }
     }
 
+    @Override
     public long getSentBytesCount() {
         if (this.outTransportMetric != null) {
             return this.outTransportMetric.getBytesTransferred();
@@ -83,6 +85,7 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         }
     }
 
+    @Override
     public long getRequestCount() {
         return this.requestCount;
     }
@@ -91,6 +94,7 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         this.requestCount++;
     }
 
+    @Override
     public long getResponseCount() {
         return this.responseCount;
     }
@@ -99,6 +103,7 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         this.responseCount++;
     }
 
+    @Override
     public Object getMetric(final String metricName) {
         Object value = null;
         if (this.metricsCache != null) {
@@ -106,18 +111,18 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         }
         if (value == null) {
             if (REQUEST_COUNT.equals(metricName)) {
-                value = new Long(requestCount);
+                value = Long.valueOf(requestCount);
             } else if (RESPONSE_COUNT.equals(metricName)) {
-                value = new Long(responseCount);
+                value = Long.valueOf(responseCount);
             } else if (RECEIVED_BYTES_COUNT.equals(metricName)) {
                 if (this.inTransportMetric != null) {
-                    return new Long(this.inTransportMetric.getBytesTransferred());
+                    return Long.valueOf(this.inTransportMetric.getBytesTransferred());
                 } else {
                     return null;
                 }
             } else if (SENT_BYTES_COUNT.equals(metricName)) {
                 if (this.outTransportMetric != null) {
-                    return new Long(this.outTransportMetric.getBytesTransferred());
+                    return Long.valueOf(this.outTransportMetric.getBytesTransferred());
                 } else {
                     return null;
                 }
@@ -126,13 +131,14 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         return value;
     }
 
-    public void setMetric(final String metricName, Object obj) {
+    public void setMetric(final String metricName, final Object obj) {
         if (this.metricsCache == null) {
             this.metricsCache = new HashMap<String, Object>();
         }
         this.metricsCache.put(metricName, obj);
     }
 
+    @Override
     public void reset() {
         if (this.outTransportMetric != null) {
             this.outTransportMetric.reset();
